web: prevent overflow of deep/long diffs

--- a/web/app/diff.css
+++ b/web/app/diff.css
@@ -108,6 +108,9 @@ ul.jsondiffpatch-delta {
 .jsondiffpatch-value {
   display: inline-block;
 }
+.jsondiffpatch-value pre {
+  white-space: pre-wrap;
+}
 .jsondiffpatch-property-name {
   display: inline-block;
   padding-right: 5px;
